footer: add src

--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
             <h1 class="header">Wroclaw Erlang User Group</h1>
             <p class="header"></p>
             <ul>
-                <li><a class="buttons github" href="https://github.com/erlang-wroclaw">GitHub Profile</a></li>
+                <li><a class="buttons github" href="http://github.com/erlang-wroclaw">GitHub Profile</a></li>
             </ul>
 
             </header>
             <footer>
-            <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+            <p><small>
+                <a href="http://pages.github.com">GitHub Pages</a>
+                | <a href="http://github.com/erlang-wroclaw/erlang-wroclaw.github.com">src</a>
+            </small></p>
             </footer>
         </div>
         <!--[if !IE]><script>fixScale(document);</script><![endif]-->
